fix align

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-	font: 300 18px/34px 'Lato', sans-serif;
+	font: 300 18px/30px 'Lato', sans-serif;
 	color: #7a7a7a;
 	letter-spacing: -0.005em;
 }
@@ -23,10 +23,10 @@ h6 {
 .ba-page p:first-of-type::first-letter {
 	font: 400 110px/34px 'Playfair Display', serif;
 	float: left;
-	padding-right: 20px;
-	padding-top: 16px;
+	padding-right: 26px;
+	padding-top: 22px;
 	color: #171717;
-	padding-bottom: 30px;
+	padding-bottom: 33px;
 }
 
 .ba-page {
